--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2.0.0 2016-05-02
+  * Improve systems for building, serving, and deploying webpack assets w/ Rails in the test/dummy app.  These systems can (and will) be used as a sample for creating new Tenon-based projects.
+
 2.0.0 2016-04-01
   * Removed standard resources from base Tenon.  They have been placed in the dummy amp:
     - Tenon::Comment
