--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+2.0.7 2016-05-12
+  * Fix issue where scaffold-generated index views referenced
+    wrong component name
+  * Clarify language in scaffold generator when encouraging user to update
+    main nav links
+
 2.0.6 2016-05-12
   * Bump to Rails 5.0.0.rc1
 
