--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.1.6 2016-11-08
+  * Remove a route conflict between devise and tenon_user controllers
+
 1.1.5 2016-04-28
   * Internationalized all the Tenon strings
 
