--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.1.7 2016-12-14
+  * Updating select2 assets (css/js) from 3.4.8 to 4.0.3
+
 1.1.6 2016-11-08
   * Remove a route conflict between devise and tenon_user controllers
 
